--- a/styles/sass/_menu.scss
+++ b/styles/sass/_menu.scss
@@ -71,7 +71,8 @@
 }
 
 .menu-toggle{
-	right:40px;
+	cursor: pointer;
+	right:20px;
 	top:30px;
 	z-index: 999;
 	text-align: center;
