--- a/styles/sass/_portfolio.scss
+++ b/styles/sass/_portfolio.scss
@@ -39,6 +39,7 @@
         }
         
         h5 {
+            font-size: .9rem;
             margin-top:-4rem;
             margin-bottom:4rem;
         }
